# benchmark-creator

./: .gitignore  CLAUDE.md  CLAUDE_PRIMEINTELLECT.md  CODING_DIFFUSION_STATUS.md  CORRUPTION_CATALOG.md  LEADERBOARD.md  LEADERBOARD_QUICKSTART.md  PAPER_DRAFT.md  PROGRESS.md  README.md  RUNBOOK.md  readme_start.md  scratchpad_claude_code.md
agents/: README.md  mini_claude_haiku_4_5_mc.yaml  mini_claude_opus_4_6.yaml  mini_claude_sonnet_4_6.yaml
benchmark_creator/: __main__.py  cli.py
benchmarks/: README.md
environments/benchmark_mc/: .env-metadata.json  README.md  pyproject.toml
environments/benchmark_mc/benchmark_mc/: benchmark_mc.py
environments/benchmark_mc/benchmark_mc/data/: all.jsonl  nutrain.jsonl  pandas_understanding.jsonl
environments/benchmark_mc/data/: all.jsonl  scikit_learn.jsonl
harness/: README.md  __init__.py  run_task.py  run_tasks.py
paper/: intro.md  main.tex  references.bib  related_work.md
results/: Qwen_Qwen2.5-Coder-32B-Instruct_n=1_3_5_7_10_d=clustered_scattered_t2.json  Qwen_Qwen2.5-Coder-7B-Instruct_n=1_3_5_7_10_d=clustered_scattered_t2.json  ablation_Qwen_Qwen3.5-2B.json  ablation_Qwen_Qwen3.5-2B.json.bak  ablation_deepseek_deepseek-chat.json  ablation_deepseek_deepseek-chat.json.bak  ablation_deepseek_deepseek-r1-0528.json  ablation_deepseek_deepseek-r1-0528.json.bak  ablation_qwen_qwen3-coder.json  ablation_qwen_qwen3-coder.json.bak  ablation_qwen_qwen3-max.json  ablation_qwen_qwen3-max.json.bak  ablation_results.json  diffusion_benchmark.json  diffusion_benchmark_full.json  nutrain_diffusion_benchmark.json
(+1151 files in other folders)
