[project]
name = "benchmark-mc"
version = "0.1.0"
description = "Behavioral benchmark MCQ environment — tests LLM overgeneralization of library rules"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.8",
    "datasets>=2.18.0",
]

[tool.verifiers.eval]
# Default evaluation settings (overridable via CLI flags)
num_examples = 20
rollouts_per_example = 3

[tool.verifiers.env]
# Entry point: prime looks for load_environment() in this module
module = "benchmark_mc.benchmark_mc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmark_mc"]

[tool.hatch.build]
include = [
    "benchmark_mc/**",
]
